# StreamingVideoMemoryBuffer

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
configs/: config.yaml
configs/dataset/: lvbench_eval.yaml  streamingbench_50.yaml
configs/experiment/: lvbench_text.yaml  streamingbench_text.yaml  streamingbench_vlm.yaml
configs/memory/: lvbench_tuned.yaml  notebook.yaml  streamingbench_tuned.yaml
configs/output/: lvbench_text.yaml  streamingbench_text.yaml  streamingbench_vlm.yaml
docs/: architecture.md  experiments.md
notebooks/: demo.ipynb  solution.ipynb
notes/: ARCHITECTURE.md  ASSIGNMENT.md  CODESTYLE.md  EVALUATION_REPORT.md  PLAN.md  answer.md  answer.py  conclusion.md  cookies.txt  evaluation_style.md  models.md  related_work_notes.md
outputs/: retrievals.md
results/: RESULTS.md
scripts/: download_video_sample.py  download_youtube.py  eval_batch.py  eval_common.py  eval_lvbench_batch.py  fetch_lvbench_videos.py  lvbench_utils.py  main.py  prepare_lvbench_manifest.py  reasoner_factory.py  run_lvbench_vlm.sh  run_streamingbench_7b.sh  run_streamingbench_text.sh  run_streamingbench_vlm.sh
src/: __init__.py  baseline.py  data_structures.py  experiment.py  formatter.py  llm_reasoner.py  memory_db.py  memory_writer.py  perception_encoder.py  prompts.py  qwen_vl_io.py  reasoner_frames.py  retriever.py  stream_reader.py  summary_builder.py  vlm_reasoner.py
tests/: test_experiment_config.py  test_memory_writer.py  test_perception_encoder.py  test_retriever.py  test_summary_builder.py
(+174 files in other folders)
