[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "streaming-video-memory-buffer"
version = "0.1.0"
description = "Hierarchical memory for streaming video question answering experiments."
readme = "README.md"
requires-python = ">=3.11"
dynamic = ["dependencies"]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "ruff>=0.6",
]

[project.scripts]
streamvmb = "src.experiment:main"

[tool.setuptools]
packages = ["src"]

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.ruff]
line-length = 100
target-version = "py311"
exclude = [
    "data",
    "notebooks",
    "notes",
    "outputs",
    "results",
]

[tool.ruff.lint]
select = ["E", "F"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"scripts/*.py" = ["E402"]
